--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,7 +47,8 @@ en:
 # Jeux #
 ########
   csgo: 
-    name: "Counter Strike : Global Offensive" 
+    name: "Counter Strike : Global Offensive"
+    mini_name: "CS:GO" 
     regles: "TEXTE REGLES"
     materiel: "Les joueurs doivent amener leurs ordinateurs munis de leurs accessoires (chargeurs, souris...) et un câble RJ45 (câblage droit) d'une longueur de 3 mètres minimum. Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement."
     recompenses: "Cash Prize de 5000 euros à répartir entre les 3 premiers."
@@ -58,6 +59,7 @@ en:
 
   lol: 
     name: "League of Legends"
+    mini_name: "LoL"
     regles: "TEXTE REGLES"
     materiel: "Les joueurs doivent amener leurs ordinateurs munis de leurs accessoires (chargeurs, souris...) et un câble RJ45 (câblage droit) d'une longueur de 3 mètres minimum. Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement."
     recompenses: "Cash prize de 2000 euros à répartir entre les 3 premiers."
@@ -68,6 +70,7 @@ en:
 
   sc2: 
     name: "Starcraft 2"
+    mini_name: "SC2"
     regles: "TEXTE REGLES"
     materiel: "Les joueurs doivent amener leurs périphériques de jeux : clavier, casque et souris. Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement."
     recompenses: "Cash prize de 2000 euros à répartir entre les 3 premiers."
@@ -78,6 +81,7 @@ en:
  
   hs: 
     name: "Hearthstone"
+    mini_name: "Hearthstone"
     regles: "TEXTE REGLES"
     materiel: "Les joueurs inscrits pour le tournois Hearthstone n’auront pas besoin de matériel. Tout joueur doit respecter le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement."
     recompenses: "Cash Prize de 1000 euros à répartir entre les 3 premiers."
