--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -210,157 +210,85 @@ en:
     url: "https://www.playstation.com/"
 
   partenaire-5:
-    name: "Virgin Radio"
-    image: "Partenaires_LOGOS_virginradio.png"
-    url: "http://www.virginradio.fr/"
-
-  partenaire-6:
     name: "Game One"
     image: "Partenaires_LOGOS_gameone.png"
     url: "http://www.gameone.net/"
 
-  partenaire-7:
-    name: "Konami"
-    image: "Partenaires_LOGOS_konami.png"
-    url: "https://www.konami.com/"
-
-  partenaire-8:
+  partenaire-6:
     name: "Xbox"
     image: "Partenaires_LOGOS_xbox.png"
     url: "http://www.xbox.com/"
 
-  partenaire-9:
-    name: "Roccat"
-    image: "Partenaires_LOGOS_roccat.png"
-    url: "http://www.roccat.org/"
-
-  partenaire-10:
+  partenaire-7:
     name: "Bandai Namco"
     image: "Partenaires_LOGOS_bandainamco.png"
     url: "http://www.bandainamcogames.com/"
 
-  partenaire-11:
+  partenaire-8:
     name: "joypad"
     image: "Partenaires_LOGOS_joypad.png"
     url: "http://joypad.fr"
 
-  partenaire-12:
+  partenaire-9:
     name: "Capcom"
     image: "Partenaires_LOGOS_capcom.png"
     url: "http://www.capcom.com/"
 
-  partenaire-13:
+  partenaire-10:
     name: "Cap-Digital"
     image: "Partenaires_LOGOS_capdigital.png"
     url: "http://www.capdigital.com/"
 
-  partenaire-14:
+  partenaire-11:
     name: "AFJV"
     image: "Partenaires_LOGOS_afjv.png"
     url: "http://www.afjv.com/"
  
-  partenaire-15:
+  partenaire-12:
     name: "Capital Games"
     image: "Partenaires_LOGOS_capitalgames.png"
     url: "http://capital-games.org/"
 
-  partenaire-16:
+  partenaire-13:
     name: "Respect Zone"
     image: "Partenaires_LOGOS_respectzone.png"
     url: "http://respectzone.org/fr/"
 
-  partenaire-17:
+  partenaire-14:
     name: "Société Générale"
     image: "Partenaires_LOGOS_societegenerale.png"
     url: "https://www.societegenerale.fr/"
 
-  partenaire-18:
+  partenaire-15:
     name: "JCDecaux"
     image: "Partenaires_LOGOS_JCDecaux.png"
     url: "http://www.jcdecaux.fr/"
 
-  partenaire-19:
+  partenaire-16:
     name: "Warner games"
     image: "Partenaires_LOGOS_warner.png"
     url: "http://www.warnerbros.com/"
 
-  partenaire-20:
+  partenaire-17:
     name: "Ubisoft"
     image: "Partenaires_LOGOS_ubisoft.png"
     url: "https://www.ubisoft.com/fr-FR/"
 
-  partenaire-21:
-    name: "Meltdown"
-    image: "Partenaires_LOGOS_meltdown.png"
-    url: "http://www.meltdown.bar/paris"
-
-  partenaire-22:
+  partenaire-18:
     name: "Square Enix"
     image: "Partenaires_LOGOS_squareenix.png"
     url: "http://eu.square-enix.com/fr/"
-
-
-
-
-  partenaire-23:
-    name: "evry2"
-    image: "Partenaires_LOGOS_evry2.png"
-    url: "http://www.evry2.com/"
-
-  partenaire-24:
-    name: "Fireworks Command Ship"
-    image: "Partenaires_LOGOS_fcs.png"
-    url: "http://www.fireworkscommandship.com/"
-
-  partenaire-25:
-    name: "Masters du Jeu Vidéo"
-    image: "Partenaires_LOGOS_mastersJV_2.png"
-    url: "http://www.mastersjeuvideo.org/"
-
-  partenaire-26:
-    name: "Ouest Games"
-    image: "Partenaires_LOGOS_OG.png"
-    url: "http://ouestgames.com/"
-
-  partenaire-27:
-    name: "War Legend"
-    image: "Partenaires_LOGOS_warlegend.png"
-    url: "http://www.warlegend.net/"
-
-  partenaire-28:
-    name: "Eclypsia"
-    image: "Partenaires_LOGOS_eclypsia.png"
-    url: "http://www.eclypsia.com/"
-
-  partenaire-29:
-    name: "Etudiant de Paris"
-    image: "Partenaires_LOGOS_letudiant.png"
-    url: "http://www.etudiantdeparis.fr/"
-
-
-
-  partenaire-30:
-    name: "BEGEEK"
-    image: "Partenaires_LOGOS_begeek.png"
-    url: "http://www.begeek.fr/"
-
-  partenaire-31:
-    name: "Gameblog"
-    image: "Partenaires_LOGOS_gameblog.png"
-    url: "http://www.gameblog.fr/"
-
-  partenaire-32:
-    name: "Melty"
-    image: "Partenaires_LOGOS_melty.png"
-    url: "http://www.melty.fr/"
-
-  partenaire-33:
-    name: "le Portail du Jeu Vidéo"
-    image: "Partenaires_LOGOS_PDJV.png"
-    url: "http://www.leportaildujeuvideo.fr/"
-
-
-
+    
+  partenaire-19:
+    name: "Nacon"
+    image: "Partenaires_LOGOS_Nacon.png"
+    url: "http://nacongaming.com/"
+    
+    
+  partenaire-20:
+    name: "Gamers Can Leave"
+    image: "Partenaires_LOGOS_gcl.png"
+    url: "http://gamerscanleave.com/"
 
   partenaire-0:
     name: "BDE ENSIIE"
